[package]
name = "mongo_derive"
version = "0.1.0"
edition = "2021"
authors = ["Haikel Ouaghrem <haikelben@gmail.com>"]
description = "Procedural macros for simplified MongoDB operations in Rust"
license = "MIT"
repository = "https://github.com/HaikelO/mongo_derive"
readme = "README.md"
keywords = ["mongodb", "derive", "macro", "database", "nosql"]
categories = ["database", "development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.99", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
bson = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
mongodb = "2.2"

[features]
proc-macro = []
